syntax = "proto2";

message environmentMessage {
  optional int32 lightLevel = 1;
  optional float temperature = 2;
  optional float humidity = 3;
  optional int32 airQuality = 4;
  optional bool presence = 5;
}


message alartMessage {
  required bool alarm = 1;
}

message ActuatorMessage {
  enum Actuator {
    LIGHT = 0;
    WINDOW = 1;
  }
  required Actuator actuator = 1;
  required bool value = 2;
}
